Fix menu on iOS

--- a/modules/g-page/g-page.scss
+++ b/modules/g-page/g-page.scss
@@ -4,10 +4,14 @@
 	overflow-x: hidden;
 	margin: 0;
 	min-width: 20rem;
-	@media(--desktop-less){
-		display: flex;
-	}
 	&__{
+		&wrap{
+			overflow-x: hidden;
+
+			@media(--desktop-less){
+				display: flex;
+			}
+		}
 		&content{
 			width: 100%;
 			overflow-x: hidden;
